Fixed some mContain references

--- a/privacy.html
+++ b/privacy.html
@@ -54,9 +54,9 @@
 				<div class="inner">
 
 					<header>
-						<p style="text-align: center;"><img src="images/mClogo300px.png" alt="" style="width: 120px;" /></p>
+						<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
 						<p style="text-align: center;"><a href="https://mcontain.md2k.org/terms.html">Link to mContain Terms of Use </a><p>
-						<h1>mContain Privacy Notice</h1>
+						<h1>TO BE UPDATED mContain Privacy Notice</h1>
 						<p>Last updated and effective as of May 11, 2020.</p>
 					</header>
 					<p>The Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis (MD2K, we, us, or our) is committed to protecting the privacy and security of the information we collect, use, share, and otherwise process.  We also believe in transparency and are committed to informing you about how we collect, use, share, and otherwise process your information when you use our Platform.  </p>
