--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 				<div class="inner">
 
 					<header>
-						<p style="text-align: center;"><img src="images/mClogo300px.png" alt="" style="width: 120px;" /></p>
+						<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
 						<h1 style="margin-bottom: 1em;">MOODS Team</h1>
 					</header>
 					<p>The MOODS app, software, and website are developed by the software engineers, staff, and doctoral students at the <a href="https://www.md2k.org" target="_blank">MD2K Center of Excellence</a> at <a href="https://www.memphis.edu" target="_blank">The University of Memphis</a>.</p>
