--- a/terms.html
+++ b/terms.html
@@ -54,9 +54,9 @@
 				<div class="inner">
 
 					<header>
-						<p style="text-align: center;"><img src="images/mClogo300px.png" alt="" style="width: 120px;" /></p>
-						<p style="text-align: center;"><a href="https://mcontain.md2k.org/privacy.html">Link to mContain Privacy Notice </a><p>
-						<h1>mContain Terms of Use</h1>
+						<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
+						<p style="text-align: center;"><a href="https://moods.md2k.org/privacy.html">Link to mContain Privacy Notice </a><p>
+						<h1>TO BE UPDATED mContain Terms of Use</h1>
 						<p>Last updated May 11, 2020.</p>
 					</header>
 
