--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<head>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162934528-1"></script> <!-- TODO FIX THIS LINK EVERYWHERE -->
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7NGD19FCGC"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'UA-162934528-1');
-</script>
+		  gtag('config', 'G-7NGD19FCGC');
+		</script>
 
 		<title>MOODS by MD2K</title>
 		<meta charset="utf-8" />
 
 		<!-- <meta property="og:image" content="https://moods.md2k.org/images/downloadMContainSmall.jpg"> -->
-		<meta property="og:title" content="mContain">
+		<meta property="og:title" content="MOODS">
 		<meta property="og:url" content="https://moods.md2k.org/">
 		<meta property="og:description" content="Mobile Open Observation of Daily Stressors">
 		<meta property="og:video:url" content="http://moods.md2k.org/images/moodsDemo1.mp4">
