--- a/team.html
+++ b/team.html
@@ -7,14 +7,14 @@
 <html>
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162934528-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7NGD19FCGC"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-  gtag('config', 'UA-162934528-1');
-</script>
+		  gtag('config', 'G-7NGD19FCGC');
+		</script>
 
 		<title>MOODS by MD2K</title>
 		<meta charset="utf-8" />
