--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
 		  gtag('config', 'G-7NGD19FCGC');
 		</script>
 
-		<title>mContain by MD2K</title>
+		<title>MOODS by MD2K</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,7 +31,7 @@
 
 				<!-- Logo -->
 					<div class="logo">
-						<a href="index.html">mContain</a><span> The <a href="https://www.md2k.org" target="_blank">MD2K Center of Excellence</a> at <a href="https://www.memphis.edu" target="_blank">The University of Memphis</a> </span>
+						<a href="index.html">MOODS</a><span> The <a href="https://www.md2k.org" target="_blank">MD2K Center of Excellence</a> at <a href="https://www.memphis.edu" target="_blank">The University of Memphis</a> </span>
 					</div>
 
 				<!-- Nav -->
