--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<meta name="twitter:url" content="https://moods.md2k.org/">
 		<meta name="twitter:title" content="MOODS">
 		<meta name="twitter:description" content="Mobile Open Observation of Daily Stressors">
-		<meta property="twitter:image" content="https://moods.md2k.org/images/moodslogo300px.png">
+		<meta property="twitter:image" content="https://moods.md2k.org/images/moodsLogo300px.png">
 		<meta name="google-play-app" content="app-id=org.md2k.moods">
 		<meta name="author" content="MD2K Center of Excellence at The University of Memphis">
 
@@ -71,7 +71,7 @@
 			<section id="banner">
 				<div class="inner">
 				<!--	<span class="icon fa-mobile"></span>   <span class="image fit portrait">  </span> -->
-					<p style="text-align: center;"><img src="images/moodslogo300px.png" alt="" style="width: 120px;" /></p>
+					<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
 					<h1>MOODS</h1>
 					<p>Mobile Open Observation of Daily Stressors<br />
 					<span style="font-size: 80%; color: #aaaaaa;">Discovering key stress events from sensor data in our day-to-day lives</span></p>
