--- a/privacy_apple.html
+++ b/privacy_apple.html
@@ -54,7 +54,7 @@
 				<div class="inner">
 
 					<header>
-						<p style="text-align: center;"><img src="images/moodslogo300px.png" alt="" style="width: 120px;" /></p>
+						<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
 						<p style="text-align: center;"><a href="https://mcontain.md2k.org/terms_apple.html">Link to mContain Terms of Use </a><p>
 						<h1>TO BE UPDATED mContain Privacy Notice</h1>
 						<p>Last updated and effective as of June 1, 2020.</p>
