Changed theme a bit and fixed some fomatting problems

--- a/team.html
+++ b/team.html
@@ -87,64 +87,13 @@
 				</div>
 			</section>
 
-			<!-- Footer -->
-		<!--		<footer id="footer">
-					<div class="inner">
-						<div class="split style1">
-							<div class="contact">
-								<h2>Contact</h2>
-									<p>1234 Street Memphis, TN 00000 | (000) 000-0000 | info@email.email</p>
-
-							<!--	<ul class="contact-icons">
-									<li class="icon fa-home"><a href="#">1234 Street <br>Memphis, TN 00000-0000</a></li>
-									<li class="icon fa-phone"><a href="#">(000) 000-0000</a></li>
-									<li class="icon fa-envelope-o"><a href="#">info@email.email</a></li>
-								</ul>
-								<ul class="icons-bordered">
-									<li><a class="icon fa-facebook" href="#">
-										<span class="label">Facebook</span>
-									</a></li>
-									<li><a class="icon fa-twitter" href="#">
-										<span class="label">Twitter</span>
-									</a></li>
-									<li><a class="icon fa-instagram" href="#">
-										<span class="label">Instagram</span>
-									</a></li>
-									<li><a class="icon fa-github" href="#">
-										<span class="label">GitHub</span>
-									</a></li>
-									<li><a class="icon fa-linkedin" href="#">
-										<span class="label">LinkedIn</span>
-									</a></li>
-								</ul>-->
-		<!--				</div> -->
-							<!-- TWH: Disabled form since we do not want this -->
-							<!-- <form action="#" method="post">
-								<h2>Email Us</h2>
-								<div class="field half first">
-									<input name="name" id="name" placeholder="Name" type="text" />
-								</div>
-								<div class="field half">
-									<input name="email" id="email" placeholder="Email" type="email" />
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input value="Send Message" class="button" type="submit" /></li>
-								</ul>
-							</form> -->
-		<!--				</div>
-						<div class="copyright"> -->
-						<div style="background-color: #257f93; color: rgba(255, 255, 255, 0.75); padding: 1.5em 0 1.5em 0 ; background-color: #257f93;">
-							<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2020 MD2K Center of Excellence. All rights reserved. <br />
+			<footer id="footer">
+						<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
 							The MD2K Center of Excellence was established via a grant (#U54EB020404) from the National Institutes of Health (NIH), through funds provided by the trans-NIH Big Data-to-Knowledge (BD2K) initiative, and is administered by the National Institute of Biomedical Imaging and Bioengineering (NIBIB).
 
 							MD2K is currently supported by NIH grants U54EB020404, R01CA190329, R01DE025244, R01MD010362, R00MD010468, R24EB025845, R01CA224537, and U01CA229437. MD2K is also supported by the National Science Foundation (NSF) grants ACI-1640813, IIS-1722646, and CNS-1823221.<br />
-						<a href="mailto:mContain@md2k.org" style="color: #ffffff;">mContain@md2k.org</a></p>
-						</div>
-		<!--			</div>
-		</footer> -->
+					<a href="mailto:moods@md2k.org" style="color: #ffffff;">moods@md2k.org</a></p>
+				</footer>
 
 			<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
