--- a/50x.html
+++ b/50x.html
@@ -90,7 +90,7 @@
     </head>
 
     <body>
-        <h1><strong>nginx error!</strong></h1>
+        <h1><strong>Page Temporarily Unavailable</strong></h1>
 
         <div class="content">
 
@@ -99,31 +99,12 @@
             <div class="alert">
                 <h2>Website Administrator</h2>
                 <div class="content">
-                    <p>Something has triggered an error on your
-                    website.  This is the default error page for
-                    <strong>nginx</strong> that is distributed with
-                    Fedora.  It is located
-                    <tt>/usr/share/nginx/html/50x.html</tt></p>
-
-                    <p>You should customize this error page for your own
-                    site or edit the <tt>error_page</tt> directive in
-                    the <strong>nginx</strong> configuration file
-                    <tt>/etc/nginx/nginx.conf</tt>.</p>
-
+                    <p>Something has triggered missing webpage on your
+                    website. If you think this page should exist, please
+                    contact <a href="mailto:support@md2k.org">support@md2k.org</a></p>
                 </div>
             </div>
 
-            <div class="logos">
-                <a href="http://nginx.net/"><img
-                    src="/nginx-logo.png"
-                    alt="[ Powered by nginx ]"
-                    width="121" height="32" /></a>
-
-                <a href="http://fedoraproject.org/"><img
-                    src="/poweredby.png"
-                    alt="[ Powered by Fedora ]"
-                    width="88" height="31" /></a>
-            </div>
         </div>
     </body>
 </html>
