--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-				<!--	<span class="icon fa-mobile"></span>   <span class="image fit portrait">  </span> -->
 					<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
 					<h1>MOODS</h1>
 					<p>Mobile Open Observation of Daily Stressors<br />
@@ -340,7 +339,7 @@
 
 			<section id="five" class="wrapper">
 				<div class="inner">
-					<h4 style="text-align: center; margin-top: 3em;">Website Disclaimer THIS NEEDS REVISED </h4>
+					<h4 style="text-align: center">Website Disclaimer THIS NEEDS REVISED </h4>
 					<p style="text-align: center; font-size:0.8em;">Last Updated April 14, 2021</p>
 
 					<p style="font-size:0.8em;">The Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis (MD2K) is the owner and creator of the MOODS mobile application (Mobile App) and its associated websites (moods.md2k.org) (Website).  Both the Mobile App and the Website offered as a service to the public.  Both are informational only and neither is intended as a substitute for medical advice.  There is no guarantee as to the accuracy, availability or completeness of the information contained within the Mobile App, the Website, or in any of their links.</p>
@@ -350,54 +349,13 @@
 			</section>
 
 
-		<!-- Five
-			<section id="five" class="wrapper">
-				<div class="inner">
-					<div class="split">
-						<section>
-							<h2> </h2>
-							<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
-							<p> </p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<div class="ratings">
-								<article>
-									<h3>Ipsum amet</h3>
-									<div class="progress" data-progress="60">60%</div>
-								</article>
-								<article>
-									<h3> </h3>
-									<div class="progress" data-progress="90">90%</div>
-								</article>
-								<article>
-									<h3> </h3>
-									<div class="progress" data-progress="75">75%</div>
-								</article>
-								<article>
-									<h3> </h3>
-									<div class="progress" data-progress="45">45%</div>
-								</article>
-								<article>
-									<h3> </h3>
-									<div class="progress" data-progress="55">55%</div>
-								</article>
-							</div>
-						</section>
-					</div>
-				</div>
-			</section> -->
-
-					<div style="background-color: #257f93; color: rgba(255, 255, 255, 0.75); padding: 1.5em 0 1.5em 0 ; background-color: #257f93;">
+			<footer id="footer">
 						<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
 							The MD2K Center of Excellence was established via a grant (#U54EB020404) from the National Institutes of Health (NIH), through funds provided by the trans-NIH Big Data-to-Knowledge (BD2K) initiative, and is administered by the National Institute of Biomedical Imaging and Bioengineering (NIBIB).
 
 							MD2K is currently supported by NIH grants U54EB020404, R01CA190329, R01DE025244, R01MD010362, R00MD010468, R24EB025845, R01CA224537, and U01CA229437. MD2K is also supported by the National Science Foundation (NSF) grants ACI-1640813, IIS-1722646, and CNS-1823221.<br />
 					<a href="mailto:moods@md2k.org" style="color: #ffffff;">moods@md2k.org</a></p>
-					</div>
-
+				</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
