--- a/terms.html
+++ b/terms.html
@@ -231,7 +231,7 @@
 							<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
 								The MD2K Center of Excellence was established via a grant (#U54EB020404) from the National Institutes of Health (NIH), through funds provided by the trans-NIH Big Data-to-Knowledge (BD2K) initiative, and is administered by the National Institute of Biomedical Imaging and Bioengineering (NIBIB).
 
-								MD2K is currently supported by NIH grants U54EB020404, R01CA190329, R01DE025244, R01MD010362, R00MD010468, R24EB025845, R01CA224537, and U01CA229437. MD2K is also supported by the National Science Foundation (NSF) grants ACI-1640813, IIS-1722646, and CNS-1823221.<br />
+								MD2K is currently supported by NIH grants R01CA190329, R01DE025244, R01MD010362, R01CA224537, and U01CA229437. MD2K is also supported by the National Science Foundation (NSF) grants ACI-1640813, IIS-1722646, and CNS-1823221.<br />
 						<a href="mailto:moods@md2k.org" style="color: #ffffff;">moods@md2k.org</a></p>
 					</footer>
 
