--- a/team.html
+++ b/team.html
@@ -69,14 +69,14 @@
 							<p><strong>Anandatirtha Nandugudi, Ph.D., Data Science Engineer.</strong> Anand is the principle developer of the MOODS study app which provides the user experience and is the primary interface participants use.  He also is responsible for both Android and iOS specific implementations to ensure that the MOODS app works across both platforms.</p>
 						<img src="images/team/Ali.png" alt="Ali" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
 							<p style="margin-bottom: 4.5em;"><strong>Nasir Ali, Ph.D., Research Assistant Professor.</strong> Nasir architects and develops the cloud platform (called Cerebral Cortex) to collect and process the data. He also integrates algorithms and analytics developed by the doctoral students in processing pipelines on the MD2K Cerebral Cortex cloud.</p>
-					<h2>MOODS Graduate Students</h2>
+					<h2>MOODS Research Team</h2>
 						<p>The following doctoral students at the MD2K Center of Excellence develop the algorithms that compute various analytics for visualizations and stress processing</p>
 						<img src="images/team/students/Neupane.jpg" alt="Neupane" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
 							<p><strong>Sameer Neupane</strong> contributes to prior works and research challenges related to analyzing participant data.  He is responsible for developing the visualization each participant receive every week based on their collected data.</p>
 						<img src="images/team/students/Saha.jpg" alt="Saha" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
 							<p><strong>Mithun Saha</strong> contributes to research challenges with explaining the algorithms and visualization to participants. </p>
 						<img src="images/team/students/Ullah.png" alt="Ullah" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
-							<p style="margin-bottom: 4.5em;"><strong>Azim Ullah</strong> develops maching learning algorithms to convert smartwatch sensor information into stress and non-stress episodes</p>
+							<p><strong>Azim Ullah</strong> develops machine learning algorithms to convert smartwatch sensor information into stress and non-stress episodes</p>
 						<img src="images/team/students/Chatterjee.jpg" alt="Chatterjee" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
 							<p><strong>Soujanya Chatterjee</strong> contributed to the initial concept of the MOODS study.</p>
 					<h2>MOODS Administration</h2>
