New consent document and main page wording

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 									<p>Uses smartphone and wearable technology to measure your stress levels throughout the day.</p>
 								</article>
 								<article class="icon fa-question">
-									<h3>How does it help?</h3>
-									<p>Provides awareness to you of your daily stressors.</p>
+									<h3>How does this research help advance science?</h3>
+									<p>Results from this study may help society better understand stress and stressor detection through the exploraion of complex interactions between stress, daily behaviors, and environmental factors.</p>
 								</article>
 								<article class="icon fa-users">
 									<h3>Who is it for?</h3>
